--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
      <h1>My Movie App</h1>
 
     <!-- Section search / sorting -->
+    <section>
+      <!-- Section heading -->
+      <h2>Movie Search / Sort</h2>
+      <!-- Form to get the search string -->
+      <form id="form-list-control">
+        <div class="mb-3">
+          <input 
+            type="text"
+            placeholder="Movie title"
+            name="search-string"
+          >
+        </div>
+        <!-- Buttons to run Search and sort functions -->
+        <div class="mb-3">
+          <button type="button">Search</button>
+          <button type="button">A - Z</button>
+          <button type="button">Z - A</button>
+        </div>
+      </form>
+    </section>
+    <!-- End of the Search / sorting section -->
+
     <!-- Movie list section -->
     <!-- Tab section -->
     <!-- Tab content section -->
