--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
     <!-- End of the Search / sorting section -->
 
     <!-- Movie list section -->
+    <section id="mList">
+      <!-- Movie list heading -->
+      <h2>Movie List</h2>
+      <!-- Movie list start -->
+      <ol class="list" id="list">
+        <li class="row">The Shawshank Redemption (1994)</li>
+        <li class="row">The Godfather (1972)</li>
+        <li class="row">The Godfather: Part II (1974)</li>
+        <li class="row">The Dark Knight (2008)</li>
+        <li class="row">12 Angry Men (1957)</li>
+        <li class="row">Schindler's List (1993)</li>
+        <li class="row">
+          The Lord of the Rings: The Return of the King (2004)
+        </li>
+        <li class="row">Pulp Fiction (1994)</li>
+      </ol>
+      <!-- Movie List end -->
+    </section>
+    <!-- End of Movie list section -->
+
     <!-- Tab section -->
     <!-- Tab content section -->
     <!-- Footer -->
