--- a/index.html
+++ b/index.html
@@ -56,7 +56,38 @@
     <!-- End of Movie list section -->
 
     <!-- Tab section -->
+    <section class="tab">
+      <!-- Buttons to change tabs -->
+       <button class="tablinks">Add a New Movie</button>
+       <button class="tablinks">Update a Movie</button>
+       <button class="tablinks">Delete a Movie</button>
+    </section>
+    <!-- End of tab section -->
+
     <!-- Tab content section -->
+    <!-- The tab content is made up of add movie / update movie and delete movie sections -->
+
+    <!-- Add Movie section -->
+    <section id="Add" class="tabcontent">
+      <h2>Add a Movie</h2>
+      <form id="form-add">
+        <div class="mb-3">
+          <label for="addTitle">Title:</label>
+          <input type="text" placeholder="Title..." name="title" id="addTitle">
+        </div>
+        <div class="mb-3">
+          <label for="addYear">Year:</label>
+          <input type="text" placeholder="Year..." name="year" id="addYear">
+        </div>
+        <button type="button" name="submit">Add Movie</button>
+      </form>
+    </section>
+    <!-- End add movie section -->
+
+    <!-- Update Movie section -->
+    <!-- End Update Movie section -->
+    <!-- Delete Movie section -->
+    <!-- End Delete Movie section -->
     <!-- Footer -->
 
   </main>
