Update movie section
Added in the update movie form section into index.html

--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
     <!-- End add movie section -->
 
     <!-- Update Movie section -->
+    <section id="Update" class="tabcontent">
+      <h2>Update a Movie</h2>
+      <form id="form-update">
+        <div class="mb-3">
+          <label for="upIndex">Index:</label>
+          <input type="text" placeholder="Index..." name="index" id="upIndex">
+        </div>
+        <div class="mb-3">
+          <label for="upTitle">Title:</label>
+          <input type="text" placeholder="Title..." name="title" id="upTitle">
+        </div>
+        <div class="mb-3">
+          <label for="upYear">Year:</label>
+          <input type="text" placeholder="Year..." name="year" id="upYear">
+        </div>
+        <button type="button" name="submit">Update Movie</button>
+      </form>
+    </section>
     <!-- End Update Movie section -->
     <!-- Delete Movie section -->
     <!-- End Delete Movie section -->
