--- a/index.html
+++ b/index.html
@@ -104,7 +104,18 @@
       </form>
     </section>
     <!-- End Update Movie section -->
+
     <!-- Delete Movie section -->
+    <section id="Delete" class="tabcontent">
+      <h2>Delete a Movie</h2>
+      <form id="form-delete">
+        <div class="mb-3">
+          <label for="delIndex">Index:</label>
+          <input type="text" placeholder="Index..." name="index" id="delIndex">
+        </div>
+        <button type="button" name="submit">Delete a Movie</button>
+      </form>
+    </section>
     <!-- End Delete Movie section -->
     <!-- Footer -->
 
