--- a/index.html
+++ b/index.html
@@ -117,8 +117,21 @@
       </form>
     </section>
     <!-- End Delete Movie section -->
+
     <!-- Footer -->
+    <footer>
+      <div>
+        <p>
+          Copyright &copy; 
+          <span id="date"></span> 
+          My Movie App
+        </p>
+      </div>
+    </footer>
 
   </main>
+  <!-- End of main content -->
+
+  <!-- Load in scripts -->
 </body>
 </html>
