JavaScript app.js planning
Added in javascript src to index.html
Planned out javascript for app.js

--- a/index.html
+++ b/index.html
@@ -135,5 +135,7 @@
   <!-- End of main content -->
 
   <!-- Load in scripts -->
+   <script src="./js/movie-list.js"></script>
+   <script src="./js/app.js"></script>
 </body>
 </html>
