--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <!-- Tab section -->
     <section class="tab">
       <!-- Buttons to change tabs -->
-       <button class="tablinks">Add a New Movie</button>
-       <button class="tablinks">Update a Movie</button>
-       <button class="tablinks">Delete a Movie</button>
+       <button class="tablinks" onclick="openForm(event, 'Add')" id="defaultOpen">Add a New Movie</button>
+       <button class="tablinks" onclick="openForm(event, 'Update')">Update a Movie</button>
+       <button class="tablinks" onclick="openForm(event, 'Delete')">Delete a Movie</button>
     </section>
     <!-- End of tab section -->
 
