Adding in a new movie
added in onclick and addclick functions.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <label for="addYear">Year:</label>
           <input type="text" placeholder="Year..." name="year" id="addYear">
         </div>
-        <button type="button" name="submit">Add Movie</button>
+        <button type="button" name="submit" onclick="addClick()">Add Movie</button>
       </form>
     </section>
     <!-- End add movie section -->
