--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <!-- Buttons to run Search and sort functions -->
         <div class="mb-3">
-          <button type="button">Search</button>
+          <button type="button" onclick="searchClick()">Search</button>
           <button type="button">A - Z</button>
           <button type="button">Z - A</button>
         </div>
