--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <!-- Buttons to run Search and sort functions -->
         <div class="mb-3">
           <button type="button" onclick="searchClick()">Search</button>
-          <button type="button">A - Z</button>
-          <button type="button">Z - A</button>
+          <button type="button" onclick="a2zClick()">A - Z</button>
+          <button type="button" onclick="z2aClick()">Z - A</button>
         </div>
       </form>
     </section>
